# uniopen

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/: manifest.xml
include/: config.h  regex.h
patch/: apprentice_c.patch  cdf_h.patch
src/: filetypes.h  handlers.c  messages.c  messages.h  uniopen.c  uniopen.h  uniopen.rc
